# up-book

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  config.py  pyproject.toml  run.py
.github/workflows/: checks.yml
app/: Dockerfile  __init__.py  environment.py  isbn.py  methods.py  models.py  sql_config.py  views.py
app/classes/: aws.py  webhook.py
app/static/styles/: main.css
app/templates/public/: book_data.html  csv_upload.html  dashboard.html  fail_login.html  fail_register.html  fail_upload.html  index.html  login.html  register.html
app/tests/: conftest.py  factories.py
app/tests/unit/: test_aws.py  test_models.py  test_validate_isbn.py  test_webhook.py
