[tool.poetry]
name = "up-book"
version = "0.1.0"
description = "A Book Upload Web App"
authors = ["Feyaaz Chishty"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.2"
psycopg2-binary = "^2.9.5"
loguru = "^0.6.0"
boto3 = "^1.26.64"
flask-session = "^0.4.0"
pandas = "^1.5.3"
requests = "^2.28.2"
gunicorn = "^20.1.0"
python-dotenv = "^0.21.1"

[tool.poetry.group.test.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
pytest = "^6.2.5"
pytest-mock = "^3.11.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310', 'py311']

[tool.isort]
profile = "black"
